@@ -19,7 +19,6 @@ import org.elasticsearch.cluster.service.MasterServiceTaskQueue;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.TimeValue;
-import org.elasticsearch.features.FeatureService;
 import org.elasticsearch.license.licensor.LicenseSigner;
 import org.elasticsearch.protocol.xpack.license.LicensesStatus;
 import org.elasticsearch.protocol.xpack.license.PutLicenseResponse;
@@ -65,11 +64,6 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-/**
- * Due to changes in JDK9 where locale data is used from CLDR, the licence message will differ in jdk 8 and jdk9+
- * https://openjdk.java.net/jeps/252
- * We run ES with -Djava.locale.providers=SPI,COMPAT and same option has to be applied when running this test from IDE
- */
 public class ClusterStateLicenseServiceTests extends ESTestCase {
 
     // must use member mock for generic
@@ -96,8 +90,7 @@ public class ClusterStateLicenseServiceTests extends ESTestCase {
             mock(ThreadPool.class),
             mockDefaultClusterService(),
             mock(Clock.class),
-            mock(XPackLicenseState.class),
-            new FeatureService(List.of())
+            mock(XPackLicenseState.class)
         );
         final String message = service.buildExpirationMessage(time, expired).toString();
         if (expired) {
@@ -192,8 +185,7 @@ public class ClusterStateLicenseServiceTests extends ESTestCase {
             mock(ThreadPool.class),
             clusterService,
             clock,
-            mock(XPackLicenseState.class),
-            new FeatureService(List.of())
+            mock(XPackLicenseState.class)
         );
         verify(clusterService).createTaskQueue(eq("license-service-start-basic"), any(), taskExecutorCaptor.capture());
 
@@ -202,7 +194,7 @@ public class ClusterStateLicenseServiceTests extends ESTestCase {
             assertThat(response.getStatus(), equalTo(PostStartBasicResponse.Status.GENERATED_BASIC));
         };
         final PlainActionFuture<PostStartBasicResponse> future = new PlainActionFuture<>();
-        service.startBasicLicense(new PostStartBasicRequest(), future);
+        service.startBasicLicense(new PostStartBasicRequest(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT), future);
 
         if (future.isDone()) {
             // If validation failed, the future might be done without calling the updater task.
@@ -285,11 +277,10 @@ public class ClusterStateLicenseServiceTests extends ESTestCase {
             threadPool,
             clusterService,
             clock,
-            licenseState,
-            new FeatureService(List.of())
+            licenseState
         );
 
-        final PutLicenseRequest request = new PutLicenseRequest();
+        final PutLicenseRequest request = new PutLicenseRequest(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT);
         request.license(toSpec(license), XContentType.JSON);
         final PlainActionFuture<PutLicenseResponse> future = new PlainActionFuture<>();
         service.registerLicense(request, future);
